# MIA_1S2026_P1_202100054

./: README.md
backend/: CMakeLists.txt
backend/include/api/: Server.h
backend/include/commands/: CatCmd.h  ChmodCmd.h  ChownCmd.h  Ext3Cmds.h  FdDisk.h  MkDirCmd.h  MkDisk.h  MkFileCmd.h  MkFsCmd.h  MountCmd.h  Project2Cmds.h  RepCmd.h  RmDisk.h  UserSessionCmds.h
backend/include/disk/: BinaryIO.h  MountManager.h
backend/include/fs/: Ext2Formatter.h  Ext2IO.h  Ext2Paths.h  FsFileOps.h  JournalManager.h
backend/include/parser/: CommandRunner.h
backend/include/session/: SessionManager.h
backend/include/structs/: EBR.h  FileBlock.h  FolderBlock.h  Inode.h  Journal.h  MBR.h  SuperBlock.h
backend/src/: main.cpp
backend/src/api/: Server.cpp
backend/src/commands/: CatCmd.cpp  ChmodCmd.cpp  ChownCmd.cpp  Ext3Cmds.cpp  FdDisk.cpp  MkDirCmd.cpp  MkDisk.cpp  MkFileCmd.cpp  MkFsCmd.cpp  MountCmd.cpp  Project2Cmds.cpp  RepCmd.cpp  RmDisk.cpp  UserSessionCmds.cpp
backend/src/disk/: BinaryIO.cpp  MountManager.cpp
backend/src/fs/: Ext2Formatter.cpp  Ext2IO.cpp  Ext2Paths.cpp  FsFileOps.cpp  JournalManager.cpp
backend/src/parser/: CommandRunner.cpp
backend/src/session/: SessionManager.cpp
frontend/: app.js  index.html
frontend/scripts/: prueba.smia  prueba2.smia
outputs/reports/: mbr_fdisk_test.txt  test_ls.txt  test_ls2.txt  test_sb2.txt  test_tree2.txt
